--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -13,6 +13,4 @@ jobs:
       - uses: actions/checkout@v4
       - uses: dart-lang/setup-dart@9a04e6d73cca37bd455e0608d7e5092f881fd603
       - name: Install dependencies
-        run: flutter pub get
-      - name: Analyze project source
-        run: flutter analyze
+        run: dart pub get
